--- a/QJY.WEB/SPWeb/Corporation/protocol.html
+++ b/QJY.WEB/SPWeb/Corporation/protocol.html
@@ -16,8 +16,181 @@
             <span>四川省凉山州科技项目申报管理系统</span>
         </div>
     </div>
-    <div class="">
-        1.为了避免在使用科技计划项目管理系统中出现不必要的麻烦，了解您在本网络服务中的权利和义务！
+    <div class="protocol_con">
+        <div class="ptitle">
+            1.为了避免在使用科技计划项目管理系统中出现不必要的麻烦，了解您在本网络服务中的权利和义务！
+        </div>
+        <div class="pbody">
+            <textarea name="textarea" cols="60" rows="20">                                           四川省凉山州科技项目申报管理系统服务协议
+
+一、特别提示
+    四川省凉山州科技项目申报管理系统（以下简称：“项目管理系统”）是四川省凉山州科学技术局（以下简称：“科技局”）对凉山州的科技计划项目实施网络化管理的专门信息系统，包括但不仅限于对用户注册、项目申报、项目审核、项目受理、项目在线评审、项目立项、任务书签署、进度汇报、结题验收、成果推广等科技项目及其它相关事宜进行管理。
+本项目管理系统的所有权归四川省凉山州科学技术局所有，受中华人民共和国相关法律法规保护。
+
+二、服务条款的确认和接纳
+为获得项目管理系统提供的网络服务，服务使用人（以下称"用户"，包括但不仅限于项目申报人、项目申报单位、归口科技局、专家、科技局各类用户）必须同意本协议的全部条款并按照页面上的提示完成全部的注册程序。
+用户在进行注册程序过程中点击本协议框底部的 "我接受本协议" 按钮即表示用户完全接受本协议项下的全部条款。
+如果用户对本协议有异议或不愿接受本协议，可点击本协议框底部的 "我拒绝本协议" 按钮，同时用户将不能享受本项目管理系统提供的各项目服务。
+
+三、服务内容
+ 3.1、注册
+    项目管理系统包括但不仅限于面向如下五类用户提供用户注册，获取登陆本系统的用户名和密码。
+    项目申报人：指向科技局申请承担项目的负责人本人；比如某某大学化学学院的某位老师，某某研究所的某位研究员、某企业的技术总监，等等。 
+    申报单位：指申报人所在的单位，或者项目承担单位。具体由该单位的科技（研）处人员在操作。
+    归口科技局：指申报单位的上级主管部门，或者科技局授权的相关市级科技主管部门。 比如：凉山州财政局、凉山州民政局，等等。具体由该归口的科技（研）处人员在操作。
+    主管部门：指凉山州科知局内的各种用户，包括局领导，各科室领导、计划科管理员，项目监督员、项目监理员、项目特派员，等等。  
+    评审专家：指凉山州科学技术局认可并授权的执行项目评审和鉴定的各类专家用户。
+ 3.2、申报
+    按照四川省凉山州科学技术局发布的申报指南， 遵照四川省凉山州科学技术局规定的各类项目申报规范，享受各类项目的在线申报服务。
+ 3.3、审查
+    项目申报单位和归口科技局依照科技局的管理规范和本单位的具体情况，本着客观公正的原则对自己所管辖的项目进行资格审查、形式审查和内容审查，以决定是否上报。
+ 3.4、受理
+    科技局依据相应的项目管理规范对各归口上传过来的项目，本着客观公正的原则进行受理，给计划编号，并依据项目类型和性质分流到相应业务科室。
+ 3.5、评审
+   科技局授权的专家登陆本系统，对相关项目进行在线评审，打分，给意见，评审结果汇总后自动排序，给下一步立项决策提供依据和参考。
+ 3.6、立项
+   科技局在专家评审的基础上，通过科室推荐、计划联席会等规定的决策程序后，并与财政厅汇签发文后，决定哪些项目立项和不立项。并以文件的形式向社会公布结果。
+ 3.7、任务书
+   对立项后的项目，以网络的方式签署任务书，明确相关责、权、利、考核指标等，项目正式进入实施阶段。
+ 3.8、进度监控
+   依据科技局和相关单位的管理规范，项目负责人及时给申报单位、归口或科技局汇报项目实施进度，发现问题及时纠正，并视情况派出项目监督员、监理员和特派员，确保项目目标准时实现。
+ 3.9、结题验收
+   项目实施完成后，项目负责人先申请结题，然后科技局视情况对项目进行结题或组织专家鉴定，以确定项目是否完任务书规定按时按质按量完成。
+ 3.10、其它服务。
+
+四、服务的变更、中断或终止
+4.1、鉴于网络服务的特殊性，用户同意项目管理系统有权随时变更、中断或终止部分或全部的网络服务。如变更、中断或终止的网络服务属于免费网络服务，项目管理系统无需通知用户，也无需对任何用户或任何第三方承担任何责任。
+ 
+4.2、用户完全明白并知道，项目管理系统需要定期或不定期地对提供网络服务的软件系统（如操作系统、应用软件等）或相关的设备进行检修或者维护，如因此类情况而造成收费网络服务在合理时间内的中断，项目管理系统无需为此承担任何责任，但项目管理系统应尽可能事先进行通告。
+ 
+    4.3、如果发生下列任何一种情形，项目管理系统有权随时中断或终止向用户提供本协议项下的网络服务而无需对用户或任何第三方承担任何责任：
+   4.3.1 用户提供的个人资料不真实； 
+   4.3.2 用户违反本协议中规定的使用规则； 
+   
+   4.4如用户注册的免费网络服务的帐号在任何连续150日内未实际使用，则项目管理系统有权删除该帐号并停止为该用户提供相关的网络服务，其它新用户可以再注册此帐号。
+ 
+   4.5用户或项目管理系统可随时根据实际情况中断服务。项目管理系统有权单方不经通知终止向用户提供某一项或多项服务；用户有权单方不经通知终止接受项目管理系统的服务。
+   结束用户服务后，用户使用项目管理系统服务的权利立即终止。从那时起，项目管理系统不再对用户承担任何义务。
+
+五、使用规则
+ 5.1  用户注册成功后，项目管理系统将给予每个用户一个用户帐号及相应的密码，该用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。 
+    如果用户未保管好自己的帐号和密码而对用户本人、项目管理系统或第三方造成的损害，该帐号用户将负全部责任。另外，每个用户都要对其帐户中的所有活动和事件负全责。您可随时改变您的密码和资料。用户同意若发现任何非法使用用户帐号或安全漏洞的情况，立即通告项目管理系统技术服务部门。
+ 
+ 5.2   用户必须确保自己注册的档案（姓名、性别、电话、邮件等）和上载的任何信息（项目申报书、任务书、进度汇报表、结题验收书、个人在项目管理系统发表的其它信息）是完全真实，准确的，可靠的。如因用户注册信息和上载信息不真实而造成的一切问题，概由用户本人负责。
+ 
+   5.3  用户必须及时更新自己的档案信息，确保自己的个人资料和上载的任何信息及
+时更新，是最新的，最全面的的，最准确的。
+
+ 5.4  用户不能将其帐号、密码转让或出借予他人使用。如用户发现其帐号遭他人非法使用，应立即通知项目管理系统。因黑客行为或用户的保管疏忽导致帐号、密码遭他人非法使用，项目管理系统不承担任何责任。
+ 
+ 5.5  用户必须同意接受项目管理系统通过电子邮件、手机短信或其他方式向用户发送通知、通告或其他信息。
+ 
+   5.6  用户对于其创作并通过项目管理系统网络服务（包括但不限于项目申报、任务书、结题验收书、个人评论）上传到项目管理系统上的内容依法享有版权及其他相关合法权利；同时，用户完全同意项目管理系统在全世界范围内具有免费的、永久性的、不可撤销的权利和许可，以使用、复制、修改、翻译、据以创作衍生作品、传播、表演和展示此等内容（整体或部分）。
+ 
+ 5.7　用户完全同意单独承担发布内容的责任。用户对服务的使用是根据所有适用于服务的地方法律、国家法律和国际法律标准的。用户承诺：
+   5.7.1在项目管理系统上发布信息或者利用项目管理系统的服务时必须符合国家和四川有关法规(包括但不仅限于中华人民共和国电信条例、 互联网信息服务管理办法、互联网电子公告服务管理规定、中华人民共和国计算机信息网络国际联网管理暂行规定、中华人民共和国计算机信息网络国际联网管理暂行规定实施办法、中华人民共和国计算机信息系统安全保护条例、计算机信息网络国际联网安全保护管理办法、四川省计算机信息系统安全保护管理办法、四川省公安厅关于计算机安全监察执法有关问题的通知。等等)，不得在项目管理系统信息系统任何位置或者利用项目管理系统提供的服务制作、复制、发布、传播以下信息：
+     (a)反对宪法所确定的基本原则的；
+　   (b) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
+　   (c) 损害国家荣誉和利益的；
+　   (d) 煽动民族仇恨、民族歧视，破坏民族团结的；
+　   (e) 破坏国家宗教政策，宣扬邪教和封建迷信的；
+　   (f) 散布谣言，扰乱社会秩序，破坏社会稳定的；
+　   (g) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
+　   (h) 侮辱或者诽谤他人，侵害他人合法权益的；
+　   (i) 含有法律、行政法规禁止的其他内容的。
+   5.7.2在项目管理系统信息系统上发布信息或者利用项目管理系统提供的服务时还必须符合其他有关国家和地区的法律规定以及国际法的有关规定。
+   5.7.3不利用项目管理系统提供的服务从事以下活动：
+　   (a) 未经允许，进入计算机信息网络或者使用计算机信息网络资源的；
+     (b) 未经允许，对计算机信息网络功能进行删除、修改或者增加的；
+　   (c) 未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加的；
+　   (d) 故意制作、传播计算机病毒等破坏性程序的；
+　   (e) 其他危害计算机信息网络安全的行为。
+   5.7.4不以任何方式干扰项目管理系统的服务。
+   5.7.5遵守项目管理系统的所有其他规定和程序。
+     用户须对自己在使用项目管理系统服务过程中的行为承担法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在项目管理系统首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予项目管理系统等额的赔偿。用户理解，如果项目管理系统发现其网站传输的信息明显属于上段第一条（即5.7.1）所列内容之一，依据中国法律，项目管理系统有义务立即停止传输，保存有关记录，向国家有关机关报告，并且删除含有该内容的地址、目录或关闭服务器。
+	 
+   5.8如用户在使用项目管理系统服务时违反任何上述规定，项目管理系统或其授权的人有权要求用户改正或直接采取一切必要的措施（包括但不限于更改或删除用户张贴的内容等、暂停或终止用户使用网络服务的权利）以减轻用户不当行为造成的影响。
+ 
+   5.9项目管理系统针对项目管理系统信息系统提供的某些特定服务的使用通过各种方式（包括但不限于网页公告、电子邮件、短信提醒等）作出的任何声明、通知、警示等内容视为本协议的一部分，用户如使用该等服务，视为用户同意该等声明、通知、警示的内容。
+
+六、专家用户特别提醒
+
+  专家用户是本系统一类特殊的用户，任何专家用户在使用本系统前，都完全明白并郑重承诺：
+ 6.1 客观公正地打分，给项目评审意见，不偏袒任何人和任何项目；
+ 
+ 6.2 主动做好回避工作，不向任何项目负责人和其它任何人员私下公布自己的打分情况；
+ 
+ 6.3主动遵守项目管理系统和科技局、以及国家关于项目评审的相关规定。
+ 
+ 6.4 专家本人对自己评审的全部项目的分数和评审意见负全责，独立承担由此造成的一切后果。
+
+七、知识产权及内容使用权
+    7.1项目管理系统提供的网络服务中包含的任何文本、图片、图形、音频和/或视频资料均受版权、商标和/或其它财产所有权法律的保护，未经相关权利人同意，上述资料均不得在任何媒体直接或间接发布、播放、出于播放或发布目的而改写或再发行，或者被用于其他任何商业目的。所有这些资料或资料的任何部分仅可作为私人和非商业用途而保存在某台计算机内。项目管理系统不就由上述资料产生或在传送或递交全部或部分上述资料过程中产生的延误、不准确、错误和遗漏或从中产生或由此产生的任何损害赔偿，以任何形式，向用户或任何第三方负责。
+ 
+    7.2项目管理系统为提供网络服务而使用的任何软件（包括但不限于软件中所含的任何图象、照片、动画、录像、录音、音乐、文字和附加程序、随附的帮助材料）的一切权利均属于该软件的著作权人，未经该软件的著作权人许可，用户不得对该软件进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）。
+
+八、隐私保护
+
+ 8.1保护用户隐私是项目管理系统的一项基本政策，项目管理系统保证不对外公开或向第三方提供单个用户的注册资料及用户在使用本信息系统网络服务时存储在项目管理系统的非公开内容，但下列情况除外：
+   8.1.1 事先获得用户的明确授权； 
+   8.1.2 根据有关的法律法规要求； 
+   8.1.3 按照相关政府主管部门的要求； 
+   8.1.4 为维护社会公众的利益； 
+   8.1.5 为维护项目管理系统的合法权益。 
+   
+ 8.2项目管理系统可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与项目管理系统同等的保护用户隐私的责任，则项目管理系统有权将用户的注册资料等提供给该第三方。
+ 
+ 8.3在不透露单个用户隐私资料的前提下，项目管理系统有权对整个用户数据库进行分析并对用户数据库进行各种利用。
+
+九、拒绝提供担保和免责声明
+
+ 9.1　鉴于网络服务的特殊性，用户明确同意使用项目管理系统服务的风险由用户个人承担。项目管理系统明确表示不提供任何类型的担保，不论是明确的或隐含的。项目管理系统不担保服务一定能满足用户的要求，也不担保服务不会受中断，对服务的及时性、安全性、真实性、出错发生都不作担保。项目管理系统拒绝提供任何担保，包括信息能否准确、及时、顺利地传送。用户理解并接受下载或通过项目管理系统产品服务取得的任何信息资料取决于用户自己，并由其承担系统受损、资料丢失以及其它任何风险。项目管理系统对在本项目服务信息系统上获得的任何信息，都不作担保。
+  
+ 9.2用户明确同意因其使用项目管理系统网络服务而产生的一切后果也由其自己承担，项目管理系统对用户不承担任何责任。
+ 
+ 9.3项目管理系统不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由项目管理系统实际控制的任何网页上的内容，项目管理系统不承担任何责任。
+ 
+ 9.4对于因不可抗力或项目管理系统不能控制的原因造成的网络服务中断或其它缺陷，项目管理系统不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。
+ 
+ 9.5用户同意，对于项目管理系统向用户提供的下列产品或者服务的质量缺陷本身及其引发的任何损失，项目管理系统无需承担任何责任：
+   9.5.1 项目管理系统向用户免费提供的各项网络服务； 
+   9.5.2 项目管理系统向用户赠送的任何产品或者服务； 
+   9.5.3 项目管理系统向收费网络服务用户附赠的各种产品或者服务。 
+
+十、协议修改
+
+ 10.1项目管理系统有权随时修改本协议的任何条款，一旦本协议的内容发生变动，项目管理系统将会通过适当方式向用户提示修改内容。
+ 
+ 10.2如果不同意项目管理系统对本协议相关条款所做的修改，用户有权停止使用网络服务。如果用户继续使用网络服务，则视为用户接受项目管理系统对本协议相关条款所做的修改。
+
+十一、通知送达
+
+ 11.1本协议项下项目管理系统对于用户所有的通知均可通过网页公告、电子邮件、手机短信或常规的信件传送等方式进行；该等通知于发送之日视为已送达收件人。
+ 
+ 11.2用户对于项目管理系统的通知应当通过项目管理系统对外正式公布的通信地址、传真号码、电子邮件地址等联系信息进行送达。
+
+十二、法律管辖
+
+ 12.1本协议的订立、执行和解释及争议的解决均应适用中国法律并受中国法院管辖。
+ 
+ 12.2如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向项目管理系统所在地的人民法院提起诉讼。 
+
+十三、解释权
+  本协议解释权归四川省凉山州科学技术局。
+ 
+十四、其它规定
+
+ 14.1本协议构成双方对本协议之约定事项及其他有关事宜的完整协议，除本协议规定的之外，未赋予本协议各方其他权利。 
+ 
+ 14.2如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。
+ 
+ 14.3本协议中的标题仅为方便而设，在解释本协议时应被忽略。
+
+</textarea>
+        </div>
+        <div class="pfoot">
+            <button onclick="javascript:location.href='regedit.html'">我接受本协议</button><button onclick="javascript:location.href='/SPWeb/index.html'">我拒绝本协议</button>
+        </div>
     </div>
 </body>
 </html>
