--- a/QJY.WEB/SPWeb/Corporation/login.html
+++ b/QJY.WEB/SPWeb/Corporation/login.html
@@ -75,7 +75,7 @@
                                 <span id="m_info"></span>
                             </div>
                             <div class="create-account login-check" style="margin-top: 20px;">
-                                <a href="register.html" id="register-btn">用户注册</a>
+                                <a href="protocol.html" id="register-btn">用户注册</a>
                                 <a href="find-cold.html?type=1" class="fr findpass">忘记密码？</a>
                             </div>
                         </li>
