--- a/QJY.WEB/SPWeb/Corporation/protocol.html
+++ b/QJY.WEB/SPWeb/Corporation/protocol.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>服务协议</title>
+    <title>申报单位注册协议</title>
     <link href="/ViewV5/web/login/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/ViewV5/web/login/uniform.default.css" rel="stylesheet" type="text/css">
     <link href="/ViewV5/web/login/components.css" id="style_components" rel="stylesheet" type="text/css">
@@ -17,10 +17,11 @@
         </div>
     </div>
     <div class="protocol_con">
-        <div class="ptitle">
+        <div class="ptitle subtitle">
             1.为了避免在使用科技计划项目管理系统中出现不必要的麻烦，了解您在本网络服务中的权利和义务！
         </div>
         <div class="pbody">
+            <div class="description">
             <textarea name="textarea" cols="60" rows="20">                                           四川省凉山州科技项目申报管理系统服务协议
 
 一、特别提示
@@ -187,9 +188,10 @@
  14.3本协议中的标题仅为方便而设，在解释本协议时应被忽略。
 
 </textarea>
+                </div>
         </div>
         <div class="pfoot">
-            <button onclick="javascript:location.href='regedit.html'">我接受本协议</button><button onclick="javascript:location.href='/SPWeb/index.html'">我拒绝本协议</button>
+            <button onclick="javascript:location.href='register.html'">我接受本协议</button><button onclick="javascript:location.href='/SPWeb/index.html'">我拒绝本协议</button>
         </div>
     </div>
 </body>
