--- a/QJY.WEB/ViewV5/index.html
+++ b/QJY.WEB/ViewV5/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>企捷科技</title>
+    <title>申报系统</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="renderer" content="webkit|ie-comp|ie-stand" />
@@ -510,7 +510,8 @@
                 layer.closeAll();
             });//筛选类型
 
-
+
+
             //$(".shuaxin").click(function () {
             //    $(this).toggleClass("dh")
             //})
