--- a/QJY.WEB/SPWeb/Corporation/register.html
+++ b/QJY.WEB/SPWeb/Corporation/register.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="/spweb/css/bootstrap.css" />
     <link rel="stylesheet" href="/spweb/css/bootstrapValidator.css" />
     <link href="/spweb/css/sp.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="/SPWeb/js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="/SPWeb/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/SPWeb/js/bootstrapValidator.js"></script>
 </head>
 <body>
     <div class="login_nav">
@@ -29,25 +26,25 @@
                 </div>
                 <div class="subcontent">
                     <!--<ul>
-        <li>
-            用户名：
-        </li>
-        <li class="form-group">
-            <div class="col-lg-5"><input type="text" class="form-control" name="userName" /></div><i>*</i> (由4-16位数字或英文字母组成)
-        </li>
-        <li>
-            密码：
-        </li>
-        <li>
-            <input type="password" /><i>*</i>
-        </li>
-        <li>
-            确认密码：
-        </li>
-        <li>
-            <input type="password" /><i>*</i> (请再次输入密码)
-        </li>
-    </ul>-->
+                        <li>
+                            用户名：
+                        </li>
+                        <li class="form-group">
+                            <div class="col-lg-5"><input type="text" class="form-control" name="userName" /></div><i>*</i> (由4-16位数字或英文字母组成)
+                        </li>
+                        <li>
+                            密码：
+                        </li>
+                        <li>
+                            <input type="password" /><i>*</i>
+                        </li>
+                        <li>
+                            确认密码：
+                        </li>
+                        <li>
+                            <input type="password" /><i>*</i> (请再次输入密码)
+                        </li>
+                    </ul>-->
 
                     <div class="form-group">
                         <label class="col-lg-3 control-label">用户名：</label>
@@ -326,7 +323,9 @@
             </div>
         </div>
     </div>
-    
+    <script type="text/javascript" src="/ViewV5/js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="/SPWeb/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/SPWeb/js/bootstrapValidator.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#defaultForm').bootstrapValidator({
@@ -351,10 +350,6 @@
                             regexp: {
                                 regexp: /^[a-zA-Z0-9_\.]+$/,
                                 message: '用户名为字母和数字'
-                            },
-                            different: {
-                                field: 'password',
-                                message: '用户名和密码不能相同'
                             }
                         }
                     },
@@ -368,17 +363,13 @@
                                 message: '两次输入密码必须一致'
                             },
                             stringLength: {
-                                min: 4,
+                                min: 6,
                                 max: 16,
-                                message: '密码长度为4-16位'
+                                message: '密码长度为6-16位'
                             },
                             regexp: {
                                 regexp: /^[a-zA-Z0-9_\.]+$/,
                                 message: '密码为字母和数字'
-                            },
-                            different: {
-                                field: 'username',
-                                message: '用户名和密码不能相同'
                             }
                         }
                     },
@@ -390,10 +381,6 @@
                             identical: {
                                 field: 'password',
                                 message: '两次输入密码必须一致'
-                            },
-                            different: {
-                                field: 'username',
-                                message: '用户名和密码不能相同'
                             }
                         }
                     },
